feat: ADD competences and fix bug visuels

--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -89,7 +89,7 @@
         <a href="https://www.linkedin.com/in/marwin-rodrigues/" target="_blank"><img src="../../assets/socials/linkedin.png" alt="" class="hover:-translate-y-2 hover:duration-100 hover:scale-110"></a>
       </div>
       <div class="flex justify-center mt-52 relative z-10">
-        <a href="#About"><img src="../../assets/down-chevron.png" alt="" class="animate-bounce"></a>
+        <a href="#About"><img src="../../assets/down-chevron.png" alt="" class="animate-bounce phone:mt-32 desktop:mt-10"></a>
       </div>
     </div>
     <div id="vantajs"  class="w-full h-full z-0 animate__animated animate__fadeIn"></div>
@@ -156,7 +156,7 @@
 
     <div class="flex justify-center"><div class="grid desktop:grid-cols-4 desktop:gap-x-24 desktop:gap-y-4 phone:gap-y-16 mb-24">
    
-      <!-- LANGAGE PROGRAMMATION  ========> Intégration Web(HTML / CSS / SCSS / Tailwind / Bootrstrap / Uikit)-->
+      <!-- Intégration Web  ========> Intégration Web(HTML / CSS / SCSS / Tailwind / Bootrstrap / Uikit)-->
     <div class="group">
       <div class="flex justify-center">
         <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-blanc bg-opacity-60 absolute scale-0 group-hover:scale-100 group-hover:translate-y-4 duration-700">
@@ -249,7 +249,7 @@
     </div>
 
 
-      <!-- FRAMEWORKS =====> Frontend Deveveloppement (Javascript / AngularJS / VueJS / ThreeJS / OpenWeatherMap / OpenStreetMap / ChartJS / EmotionCSS / Animation CSS / VantaJS / AlpineJS / AnimeJS) -->
+      <!-- Front-end =====> Frontend Deveveloppement (Javascript / AngularJS / VueJS / ThreeJS / OpenWeatherMap / OpenStreetMap / ChartJS / EmotionCSS / Animation CSS / VantaJS / AlpineJS / AnimeJS) -->
     <div class="group">
       <div class="flex justify-center">
         <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-blanc bg-opacity-60 absolute scale-0 group-hover:scale-100 group-hover:translate-y-4 duration-700">
@@ -278,16 +278,26 @@
               <p class="text-center text-3xs text-white group-hover:text-black">Angular</p>
             </div> </div>
           </div>
+          
           <!-- VueJS -->
           <div class="relative mt-2">
             <div class="flex justify-center">
               <img src="../../assets/competences/vuejs.png" alt="" class="w-[32px]">
             </div>
-
-
             <div class="flex justify-center">
             <div class="px-1 bg-white border border-black desktop:absolute rounded-full">
               <p class="text-center text-3xs text-white group-hover:text-black">Vue</p>
+            </div> </div>
+          </div>
+          
+          <!-- NuxtJS -->
+          <div class="relative mt-2">
+            <div class="flex justify-center">
+              <img src="../../assets/competences/NuxtJS.png" alt="" class="w-[32px]">
+            </div>
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">Nuxt</p>
             </div> </div>
           </div>
 
@@ -431,10 +441,10 @@
    
 
 
-      <!-- CMS  =========> Backend Developpement (PHP / .NET / NodeJS / PhpMyAdmin / PostGre / Supabase / Firebase)-->
+      <!-- Back-end  =========> Backend Developpement (PHP / .NET / NodeJS / PhpMyAdmin / PostGre / Supabase / Firebase)-->
     <div class="group">
       <div class="flex justify-center z-10">
-        <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-mdark absolute scale-0 group-hover:scale-100 group-hover:translate-y-4 duration-700 top-[1450px]">
+        <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-mdark absolute scale-0 group-hover:scale-100 group-hover:translate-y-4 duration-700 desktop:top-[1600px]">
           <div class="flex justify-center"><div class="grid desktop:grid-cols-3 gap-x-24 gap-y-11 py-6 px-8 desktop:mt-20">
           <!-- PHP -->
           <div class="relative">
@@ -566,10 +576,10 @@
 
 
 
-      <!-- BDD  ==========> Outils & Autres (Adobe Creative / Figma / Git / Github / Office 365 / Microsoft Power Platform / Wordpress / Wix / Trello / Blender / 3DS Max / Unreal Engine / Da Vinci Resolve / Wondershare Filmora / Python / VBA / Java )-->
+      <!-- Outils and Others  ==========> Outils & Autres (Adobe Creative / Figma / Git / Github / Office 365 / Microsoft Power Platform / Wordpress / Wix / Trello / Blender / 3DS Max / Unreal Engine / Da Vinci Resolve / Wondershare Filmora / Python / VBA / Java )-->
     <div class="group">
       <div class="flex justify-center z-10">
-        <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-mdark absolute scale-0 group-hover:scale-100 group-hover:translate-y-4 duration-700 desktop:top-[1280px]">
+        <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-mdark absolute scale-0 group-hover:scale-100 group-hover:-translate-y-[250px] duration-700 desktop:top-[1600px]">
           <div class="flex justify-center"><div class="grid desktop:grid-cols-3 gap-x-24 gap-y-11 py-6 px-8 desktop:mt-12">
          
             <!-- Adobe Creative -->
@@ -621,16 +631,22 @@
             <div class="flex justify-center">
               <img src="../../assets/competences/github.png" alt="" class="w-[32px]">
             </div>
-
-
             <div class="flex justify-center">
             <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
               <p class="text-center text-4xs text-white group-hover:text-black">Github</p>
             </div> </div>
           </div>
 
-
-
+          <!-- DevOps -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../../assets/competences/AzureDevops.png" alt="" class="w-[32px]">
+            </div>
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-4xs text-white group-hover:text-black">DevOps</p>
+            </div> </div>
+          </div>
 
           <!-- Office -->
           <div class="relative">
@@ -665,16 +681,25 @@
             <div class="flex justify-center">
               <img src="../../assets/competences/wordpress.png" alt="" class="w-[48px]">
             </div>
-
-
             <div class="flex justify-center">
             <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
               <p class="text-center text-xs text-white group-hover:text-black">Wordpress</p>
             </div> </div>
           </div>
 
+          <!-- Prismic -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../../assets/competences/Prismic.png" alt="" class="w-[48px]">
+            </div>
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-xs text-white group-hover:text-black">Prismic</p>
+            </div> </div>
+          </div>
 
-          <!-- Power Platform -->
+
+          <!-- Wix -->
           <div class="relative desktop:mt-5">
             <div class="flex justify-center">
               <img src="../../assets/competences/wix.png" alt="" class="w-[48px]">
@@ -777,11 +802,42 @@
             <div class="flex justify-center">
               <img src="../../assets/competences/OBS.png" alt="" class="w-[48px]">
             </div>
-
-
             <div class="flex justify-center">
             <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
               <p class="text-center text-xs text-white group-hover:text-black">OBS</p>
+            </div> </div>
+          </div>
+
+          <!-- ChatGPT -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../../assets/competences/ChatGPT.png" alt="" class="w-[48px]">
+            </div>
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-xs text-white group-hover:text-black">ChatGPT</p>
+            </div> </div>
+          </div>
+
+          <!-- Copilot -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../../assets/competences/Copilot.png" alt="" class="w-[48px]">
+            </div>
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-xs text-white group-hover:text-black">Copilot</p>
+            </div> </div>
+          </div>
+
+          <!-- Selenium -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../../assets/competences/Selenium.png" alt="" class="w-[48px]">
+            </div>
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-xs text-white group-hover:text-black">Selenium</p>
             </div> </div>
           </div>
 
