fix: max responsive avis and fix profil section

--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -89,14 +89,14 @@
         <a href="https://www.linkedin.com/in/marwin-rodrigues/" target="_blank"><img src="../../assets/socials/linkedin.png" alt="" class="hover:-translate-y-2 hover:duration-100 hover:scale-110"></a>
       </div>
       <div class="flex justify-center mt-52 relative z-10">
-        <a href="#About"><img src="../../assets/down-chevron.png" alt="" class="animate-bounce phone:mt-32 desktop:mt-10"></a>
+        <a href="#About"><img src="../../assets/down-chevron.png" alt="" class="animate-bounce phone:mt-32 desktop:-mt-4"></a>
       </div>
     </div>
     <div id="vantajs"  class="w-full h-full z-0 animate__animated animate__fadeIn"></div>
   </section>
 
 
-  <section id="About" class="mt-10">
+  <section id="About" class="mt-40">
     <!-- <img src="../assets/nuage1.png" alt="" id="cloud" class="absolute hidden desktop:flex mt-10"> -->
 
 
@@ -129,15 +129,15 @@
       </div>
 
 
-            <div class="grid-cols-1">
+      <!-- <div class="grid-cols-1">
         <div class="flex justify-center">
           <img src="../../assets/Marwin.png" alt="" class="absolute desktop:scale-95 phone:w-1/2  phone:-bottom-60 phone:right-9 desktop:w-max desktop:-top-16 desktop:right-64">
         </div>
-      </div>
+      </div> -->
 
 
       </div>
-      <img src="../../assets/wave_profil.svg" alt="" class="absolute z-10 w-full phone:-bottom-60">
+      <img src="../../assets/wave-me_profil.png" alt="" class="absolute z-10 w-full phone:-bottom-60">
     </div>
 
 
@@ -1092,7 +1092,7 @@
 
     </div> -->
 
-    <div class="relative w-11/12 mx-auto desktop:mt-32 phone:mt-52">
+    <div class="relative w-11/12 mx-auto desktop:mt-32 phone:mt-96">
       <div class="w-full" style="scroll-snap-type: x mandatory;">
          <!-- first -->
          <div class="">
@@ -1187,7 +1187,7 @@
 
   <!-- Veille Technologique -->
 
-  <section id="Veilles" class="desktop:mt-80 phone:mt-96 mb-20">
+  <section id="Veilles" class="desktop:mt-80 phone:mt-[800px] mb-20">
 
     <h1 class="text-jaune desktop:text-2xl font-swap font-extralight mt-10 mb-20">Veille Technologique</h1>
 
