fix: content in href="" and add target

--- a/src/app/card-client/card-client.component.html
+++ b/src/app/card-client/card-client.component.html
@@ -2,7 +2,7 @@
     <img :src="{{client.photo}}" alt="" class="rounded-full w-1/12">
     <div>
         <p>{{client.name}}</p>
-        <p>{{client.poste}} <a :href="{{client.url}}" class="hover:animate-pulse hover:underline text-jaune">{{client.projet}}</a></p>
+        <p>{{client.poste}} <a :href="{{client.url}}" target="_blank" class="hover:animate-pulse hover:underline text-jaune">{{client.projet}}</a></p>
     </div>
 </div>
 
