--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -112,7 +112,7 @@
         <h3 class="desktop:text-base text-jaune phone:ml-2 desktop:ml-0">WebMaster Junior</h3>
 
 
-        <p class="desktop:text-3xs phone:text-5xs text-opacity-75 mt-4 w-10/12 phone:ml-2 desktop:ml-0">Fraichement Diplômé d’un BUT MMI à <a href="#"><span class="text-jaune hover:underline hover:animate-pulse"> MMI Montbéliard </span></a>, je possède une expertise en développement web, communication digital & print, UX/UI, et programmation de jeux vidéo. Déterminé à évoluer en tant que développeur front-end, mon objectif est d'atteindre le poste de directeur de projet web. Motivé et prêt à contribuer à des projets web de haut niveau.</p>
+        <p class="desktop:text-3xs phone:text-5xs text-opacity-75 mt-4 w-10/12 phone:ml-2 desktop:ml-0">Fraichement Diplômé d’un BUT MMI à <a href="https://www.linkedin.com/school/mmimontbeliard/?originalSubdomain=fr" target="_blank"><span class="text-jaune hover:underline hover:animate-pulse"> MMI Montbéliard </span></a>, je possède une expertise en développement web, communication digital & print, UX/UI, et programmation de jeux vidéo. Déterminé à évoluer en tant que développeur front-end, mon objectif est d'atteindre le poste de directeur de projet web. Motivé et prêt à contribuer à des projets web de haut niveau.</p>
      
         <ul class="theme-list mt-5 phone:ml-2 desktop:ml-0">
             <li><b>Réside:</b> Divonne-les-bains, FR</li>
@@ -1803,7 +1803,7 @@
 
   <!-- Footer -->  
 
-  <footer class="mt-96">
+  <footer class="mt-96" id="Footer">
 
     <!-- NE PAS TOUCHER -->
     <div class="waves">
