feat: Add Statistiques

--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1073,7 +1073,7 @@
         
         <div class="flex desktop:gap-28 phone:col-span-2">
           <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">13 projets</p>
-          <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">??? ???? ????</p>
+          <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">5 ans de travail</p>
         </div>
       </div>
     </div>
