--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -12,27 +12,15 @@
     <div class="flex flex-wrap gap-56 relative">
       <a href="#top" class="desktop:w-1/12 desktop:scale-50 phone:scale-100 phone:w-1/5 phone:mt-2 phone:ml-2 desktop:mt-0 desktop:ml-0 hover:animate-pulse"><img src="../../assets/marwin-logo.svg"></a>
       <div class="desktop:hidden flex mt-7 scale-110">
-        <!-- <a href="#About"><button><img src="../assets/down-chevron.png" alt=""></button></a> -->
       </div>
-
-
-
 
       <div class="flex pt-10 gap-96">
              
         <!-- MENU PC -->
         <nav>
           <div class="desktop:flex hidden -mt-2 gap-96">
-
-
-
-
            
-              <!--  -->
-            <ul class="flex gap-10 pt-5 rounded-full">
-
-
-             
+            <ul class="flex gap-10 pt-5 rounded-full">             
                 <div class="group relative">
                   <a href="#About" class="z-20"><li class="ml-4 z-20"><p class="z-20 relative opacity-60 group-hover:opacity-100 duration-200 group-hover:font-bold">À propos</p></li></a>
                   <div class="flex justify-center"><div class="group-hover:w-full w-0 duration-500 bg-jaune h-1 rounded-lg ml-4 "></div></div>
@@ -49,28 +37,12 @@
                   <a href="#Contact" class="z-20"><li class="ml-4 z-20"><p class="z-20 relative opacity-60 group-hover:opacity-100 duration-200 group-hover:font-bold">Contact</p></li></a>
                   <div class="flex justify-center"><div class="group-hover:w-full w-0 duration-500 bg-jaune h-1 rounded-lg ml-4 "></div></div>
                 </div>
-
-
-
-
             </ul>
-
-
-             <!-- <button class="mt-3" onclick="english == !english; console.log(english)" *ngif="!english">EN</button>
-            <button class="mt-3" onclick="english == !english; console.log(english)" *ngif="english">FR</button>  -->
            
         </div>
         <div class="desktop:hidden">
-         
         </div>
         </nav>
-
-
-       
-
-
-
-
       </div>  
     </div>
   </header>
@@ -97,62 +69,34 @@
 
 
   <section id="About" class="mt-40">
-    <!-- <img src="../assets/nuage1.png" alt="" id="cloud" class="absolute hidden desktop:flex mt-10"> -->
-
-
     <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-jaune to-blanc phone:text-lg desktop:text-2xl desktop:ml-20 phone:text-center desktop:text-left font-swap py-4">PRÉSENTATION</h1>
-   
-   
+
     <div class="flex justify-center relative">
     <div class="desktop:grid desktop:grid-cols-2 mt-10 list-item items-center">
-
-
       <div class="grid-cols-2 desktop:ml-11 z-20">
         <h2 class="desktop:text-lg phone:ml-2 desktop:ml-0" >Marwin RODRIGUES</h2>
         <h3 class="desktop:text-base text-jaune phone:ml-2 desktop:ml-0">WebMaster Junior</h3>
-
-
         <p class="desktop:text-3xs phone:text-5xs text-opacity-75 mt-4 w-10/12 phone:ml-2 desktop:ml-0">Fraichement Diplômé d’un BUT MMI à <a href="https://www.linkedin.com/school/mmimontbeliard/?originalSubdomain=fr" target="_blank"><span class="text-jaune hover:underline hover:animate-pulse"> MMI Montbéliard </span></a>, je possède une expertise en développement web, communication digital & print, UX/UI, et programmation de jeux vidéo. Déterminé à évoluer en tant que développeur front-end, mon objectif est d'atteindre le poste de directeur de projet web. Motivé et prêt à contribuer à des projets web de haut niveau.</p>
-     
         <ul class="theme-list mt-5 phone:ml-2 desktop:ml-0">
             <li><b>Réside:</b> Divonne-les-bains, FR</li>
             <li><b>Age:</b> 23</li>
             <li><b>Né:</b> 19/03/2001</li>
             <li><b>Contact: </b> <a href="mailto:contact@marwin-rodrigues.fr" class="text-jaune hover:underline hover:animate-pulse">contact@marwin-rodrigues.fr</a></li>
           </ul>
-
-
           <div class="flex justify-center desktop:w-1/2 mt-4">
           <a href="../../assets/CV-FR-FD_Marwin-RODRIGUES.pdf" target="_blank"><button class="rounded-full border-2 border-jaune px-2 py-1 hover:bg-jaune hover:text-white hover:scale-110 duration-300">Voir mon CV</button></a>
           </div>
-     
       </div>
-
-
-      <!-- <div class="grid-cols-1">
-        <div class="flex justify-center">
-          <img src="../../assets/Marwin.png" alt="" class="absolute desktop:scale-95 phone:w-1/2  phone:-bottom-60 phone:right-9 desktop:w-max desktop:-top-16 desktop:right-64">
-        </div>
-      </div> -->
-
 
       </div>
       <img src="../../assets/wave-me_profil.png" alt="Image Profil" class="absolute z-10 w-full phone:-bottom-60">
     </div>
-
-
-    <!-- <img src="../assets/nuage2.png" alt="" id="cloud" class="absolute right-56 w-1/12 z-0 hidden desktop:flex -mt-2">
-  <img src="../assets/nuage2.png" alt="" id="cloud" class="absolute right-64 -mt-12 w-2/12 z-0 hidden desktop:flex"> -->
-
 
   </section>
 
 
   <section id="Compet" class="pb-8 pt-3 mt-52" >
     <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-jaune to-noir desktop:text-2xl desktop:mr-20 text-right font-swap">COMPÉTENCES</h1>
-
-
-
 
     <div class="flex justify-center"><div class="grid desktop:grid-cols-4 desktop:gap-x-24 desktop:gap-y-4 phone:gap-y-16 mb-24">
    
@@ -951,9 +895,9 @@
                 <small class="fg-theme">mmi montbéliard</small>
                 <p>Formation aux métiers du web, spécialité <b>Développement Web & dispositifs intéractifs</b></p>
               </div>
-              <!-- <div class="text-center wow fadeInUp">
-                <a href="https://marwin-rodrigues.fr/MMI/" target="_blank" class="btn btn-theme">Projets Réalisés en MMI</a>
-              </div> -->
+              <div class="text-center wow fadeInUp mb-2">
+                <a href="https://marwin-rodrigues.fr/MMI/" target="_blank" class="btn btn-theme hover:underline hover:animate-pulse">Projets Réalisés en MMI</a>
+              </div>
             </li>
             <li>
               <div class="title">09/2020 à 06/2021</div>
@@ -1017,7 +961,6 @@
               <div class="title">09/2020 à Aujourd'hui</div>
               <div class="details">
                 <h5><b>Initiation d’adolescent à la programmation</b></h5>
-                <!-- <small class="fg-theme">Stellantis</small> -->
                 <p>Encadrement et initiation à la programmation pour des groupes d'adolescents âgés d'environ 13 ans</p>
               </div>
             </li>
@@ -1078,15 +1021,6 @@
       </div>
     </div>
   </div>
-    <!-- Avis Clients -->
-
-    <!-- <div class="grid phone:gap-y-5 desktop:grid-cols-2 mt-10 desktop:ml-8 desktop:mr-8">
-      
-      <app-card-client [client]="clientJadyss"/>
-      
-      <app-card-client [client]="clientChooseMe"/>
-
-    </div> -->
 
     <div class="relative w-11/12 mx-auto desktop:mt-32 phone:mt-96">
       <div class="w-full" style="scroll-snap-type: x mandatory;">
@@ -1777,7 +1711,6 @@
   <h1 class="text-jaune desktop:text-2xl font-swap font-extralight mt-10 mb-20 text-right">Contact</h1>
 
     <section id="Contact">
-      <!-- <a href="mailto:contact@marwin-rodrigues.fr"><button class="bg-jaune py-6 px-32 border-noir border-2 rounded-xl hover:scale-105 text-blanc hover:text-noir hover:border-jaune hover:bg-opacity-40 ease-in-out transition-all text-lg">Contacter par mail</button></a> -->
 
         <h1 class="font-swap text-center text-jaune desktop:text-9xl phone:text-5xl relative">CONVAINCU ?!</h1>
         <div class="flex justify-center absolute desktop:left-1/4 phone:ml-10 desktop:ml-0">
