feat: add GitLab and Change button cardproject

--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -581,6 +581,17 @@
             </div> </div>
           </div>
 
+          <!-- GitLab -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../../assets/competences/GitLab.png" alt="Icon Github" class="w-[32px]">
+            </div>
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-4xs text-white group-hover:text-black">GitLab</p>
+            </div> </div>
+          </div>
+
           <!-- DevOps -->
           <div class="relative">
             <div class="flex justify-center">
