feat: responsive phone

--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -50,10 +50,10 @@
 
   <section id="top">
     <!-- <parallax /> -->
-    <div class="absolute z-10 mt-56 phone:left-10 desktop:left-1/3">
-      <h1 class="desktop:py-4 text-transparent bg-clip-text bg-gradient-to-br from-blanc to-jaune font-swap text-center phone:text-lg desktop:text-2xl animate__animated animate__jackInTheBox">Welcome to <span class="font-bold"> <br class="desktop:flex hidden"/> Marwin RODRIGUES</span></h1>
+    <div class="absolute z-10 mt-56 phone:left-1/4 desktop:left-1/3">
+      <h1 class="desktop:py-4 text-transparent bg-clip-text bg-gradient-to-br from-blanc to-jaune font-swap text-center phone:text-[38px] desktop:text-2xl animate__animated animate__jackInTheBox">Welcome to <span class="font-bold"> <br class="desktop:flex hidden"/> Marwin RODRIGUES</span></h1>
       <div class="flex justify-center">
-        <div class="desktop:py-1 desktop:px-5 mt-2 bg-jaune bg-opacity-40 rounded-full w-4/5 text-center animate__animated animate__zoomInUp"> <h3 class="text-blanc text-opacity-75 shadow-2xl shadow-black rounded-full phone:text-4xs desktop:text-3xs">WebMaster Junior</h3></div>
+        <div class="desktop:py-1 desktop:px-5 mt-2 bg-jaune bg-opacity-40 rounded-full w-4/5 text-center animate__animated animate__zoomInUp"> <h3 class="text-blanc text-opacity-75 shadow-2xl shadow-black rounded-full phone:text-lg desktop:text-3xs">WebMaster Junior</h3></div>
       </div>
       <div class="flex justify-center gap-10 mt-5 animate__animated animate__fadeIn">
         <a href="https://github.com/Marwin-Rdgs" target="_blank"><img src="../../assets/socials/github.png" alt="Logo Github" class="hover:-translate-y-2 hover:duration-100 hover:scale-110"></a>
@@ -83,13 +83,13 @@
             <li><b>Né:</b> 19/03/2001</li>
             <li><b>Contact: </b> <a href="mailto:contact@marwin-rodrigues.fr" class="text-jaune hover:underline hover:animate-pulse">contact@marwin-rodrigues.fr</a></li>
           </ul>
-          <div class="flex justify-center desktop:w-1/2 mt-4">
+          <div class="desktop:flex desktop:justify-center phone:ml-2 desktop:ml-0 desktop:w-1/2 mt-4">
           <a href="../../assets/CV-FR-FD_Marwin-RODRIGUES.pdf" target="_blank"><button class="rounded-full border-2 border-jaune px-2 py-1 hover:bg-jaune hover:text-white hover:scale-110 duration-300">Voir mon CV</button></a>
           </div>
       </div>
 
       </div>
-      <img src="../../assets/wave-me_profil.png" alt="Image Profil" class="absolute z-10 w-full phone:-bottom-60">
+      <img src="../../assets/wave-me_profil.png" alt="Image Profil" class="absolute z-10 w-full phone:-bottom-72 desktop:-bottom-60">
     </div>
 
   </section>
