feat: add responsive for stats page

--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1019,13 +1019,13 @@
     <hr class="px-10 border-jaune border-2 shadow-lg shadow-jaune w-1/3"/>
 
     <div class="absolute desktop:bottom-48">
-      <div class="desktop:flex phone:grid phone:grid-cols-2 desktop:gap-96">
-        <div class="flex desktop:gap-28 desktop:mr-52 phone:col-span-2">
+      <div class="desktop:flex phone:grid phone:grid-cols-2 phone:gap-x-96 phone:gap-10 desktop:gap-96">
+        <div class="desktop:flex desktop:gap-28 desktop:mr-52">
           <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">+999 lignes de codes</p>
           <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">9 clients</p>
         </div>
         
-        <div class="flex desktop:gap-28 phone:col-span-2">
+        <div class="desktop:flex desktop:gap-28">
           <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">13 projets</p>
           <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">5 ans de travail</p>
         </div>
