--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -50,7 +50,8 @@
 
   <section id="top">
     <!-- <parallax /> -->
-    <div class="absolute z-10 mt-56 phone:left-1/4 desktop:left-1/3">
+    <div class="flex justify-center">
+    <div class="absolute z-10 mt-56">
       <h1 class="desktop:py-4 text-transparent bg-clip-text bg-gradient-to-br from-blanc to-jaune font-swap text-center phone:text-[38px] desktop:text-2xl animate__animated animate__jackInTheBox">Welcome to <span class="font-bold"> <br class="desktop:flex hidden"/> Marwin RODRIGUES</span></h1>
       <div class="flex justify-center">
         <div class="desktop:py-1 desktop:px-5 mt-2 bg-jaune bg-opacity-40 rounded-full w-4/5 text-center animate__animated animate__zoomInUp"> <h3 class="text-blanc text-opacity-75 shadow-2xl shadow-black rounded-full phone:text-lg desktop:text-3xs">WebMaster Junior</h3></div>
@@ -64,11 +65,12 @@
         <a href="#About"><img src="../../assets/down-chevron.png" alt="Chevron" class="animate-bounce phone:mt-32 desktop:-mt-4"></a>
       </div>
     </div>
+    </div>
     <div id="vantajs"  class="w-full h-full z-0 animate__animated animate__fadeIn"></div>
   </section>
 
 
-  <section id="About" class="mt-40">
+  <section id="About" class="phone:mt-40 desktop:mt-60">
     <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-jaune to-blanc phone:text-lg desktop:text-2xl desktop:ml-20 phone:text-center desktop:text-left font-swap py-4">PRÉSENTATION</h1>
 
     <div class="flex justify-center relative">
