feat:test-fullpage

--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -47,8 +47,8 @@
     </div>
   </header>
 
-
-  <section id="top">
+  <app-full-page-wrapper>
+  <section id="top" class="section">
     <!-- <parallax /> -->
     <div class="flex justify-center">
     <div class="absolute z-10 mt-56">
@@ -70,7 +70,7 @@
   </section>
 
 
-  <section id="About" class="phone:mt-40 desktop:mt-60">
+  <section id="About" class="phone:mt-40 desktop:mt-60 section">
     <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-jaune to-blanc phone:text-lg desktop:text-2xl desktop:ml-20 phone:text-center desktop:text-left font-swap py-4">PRÉSENTATION</h1>
 
     <div class="flex justify-center relative">
@@ -95,6 +95,7 @@
     </div>
 
   </section>
+</app-full-page-wrapper>
 
 
   <section id="Compet" class="pb-8 pt-3 mt-52" >
