feat:add-newProjetc2024

--- a/src/app/all-project-component/all-project-component.component.html
+++ b/src/app/all-project-component/all-project-component.component.html
@@ -5,6 +5,9 @@
     </div>
 
     <div class="grid gap-20">
+      <app-card-project [project]="projectTony"/>
+      <app-card-project [project]="projectMToutFer"/>
+      <app-card-project [project]="projectDevred"/>
       <app-card-project [project]="projectiutNFCTV"/>
       <app-card-project [project]="projectEmorphoz"/>
       <app-card-project [project]="projectgoMatch"/>
