--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1028,8 +1028,8 @@
         </div>
         
         <div class="desktop:flex desktop:gap-28">
-          <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">13 projets</p>
-          <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">5 ans de travail</p>
+          <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">14 projets</p>
+          <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">6 ans d'expériences</p>
         </div>
       </div>
     </div>
