--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1736,7 +1736,8 @@
 
         <div class="flex justify-center mt-32">
           <div>
-            <a href="mailto:contact@marwin-rodrigues"><button class="w-full px-36 py-2 border-2 border-jaune rounded-md shadow-md shadow-jaune hover:border-blanc hover:bg-jaune hover:bg-opacity-75 hover:shadow-lg hover:shadow-jaune font-sans font-bold desktop:text-base phone:text-sm">Me contacter par mail</button></a>
+            <a href="https://calendly.com/contact-aezn/marwin-rodrigues" target="_blank"><button class="w-full px-36 py-2 border-2 border-jaune rounded-md shadow-md shadow-jaune hover:border-blanc hover:bg-jaune hover:bg-opacity-75 hover:shadow-lg hover:shadow-jaune font-sans font-bold desktop:text-base phone:text-sm">Planifier un <b>rendez-vous</b> par visio</button></a>
+            <a href="mailto:contact@marwin-rodrigues.fr" class="text-jaune hover:underline hover:animate-pulse mt-4 text-center flex justify-center">contact@marwin-rodrigues.fr</a>
             <ul class="flex justify-center mt-7 gap-4">
               <li><a href="https://github.com/Marwin-Rdgs" target="_blank"> <img src="../../assets/socials/github_dark.png" alt="Icon of Github" class="scale-100 hover:scale-105 hover:-translate-y-4 -translate-y-0 transition-all ease-in-out"> </a></li>
               <li><a href="https://www.linkedin.com/in/marwin-rodrigues/" target="_blank"> <img src="../../assets/socials/linkedin_dark.png" alt="Icon of Linkedin" class="scale-100 hover:scale-105 hover:-translate-y-4 -translate-y-0 transition-all ease-in-out"> </a></li>
